Closed Bug 473906 Opened 16 years ago Closed 16 years ago

OS/2 follow-up to bug Bug 448830 - Split nsInt(Rect|Size|Point|Margin)

Categories

(Core :: Layout, defect)

x86
OS/2
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: wuno, Assigned: wuno)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.2a1pre) Gecko/20090112 Minefield/3.2a1pre
Build Identifier: 

Files in widget/src/os2 have to be updated after checkin for bug448830 to unbreak the build + a typo fix in an OS/2 section of layout/general/nsObjectFrame.cpp (s/AppUnitsPerDevicePixel/AppUnitsPerDevPixel)

Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Assignee: nobody → wuno
Version: unspecified → Trunk
Attached patch fix OS/2Splinter Review
This should do it ... still building
Status: NEW → ASSIGNED
Comment on attachment 357320 [details] [diff] [review]
fix OS/2

Yep, it does ;)
Attachment #357320 - Flags: review?(mozilla)
Blocks: 448830
Comment on attachment 357320 [details] [diff] [review]
fix OS/2

Thanks, looks good.

There are two cases where arguments lined up before, I'll fix them on checkin.
Attachment #357320 - Flags: review?(mozilla) → review+
Pushed to mozilla-central: http://hg.mozilla.org/mozilla-central/rev/9f94446dd65a

Thanks!
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: