[OS/2] Bug 473906: follow-up to Bug 448830 - Split nsInt(Rect|Size|Point|Margin), r=weilbacher